fix: :bug: overflow y-line can scroll

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,5 +3,5 @@
 	height: 100vh;
 
 	position: relative;
-	overflow: hidden;
+	overflow: hidden auto;
 }
